--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,11 @@
+*{
+    margin: :0;
+    padding: 0;
+}
+body, html{
+    height: 100%;;
+    
+}
 div{
     border:1px solid;
     background-color: lightblue;
@@ -8,8 +16,19 @@ h1{
 }
 #container{
     background-color: darkorange;
-    padding: 25px 25px;
     display: flex;
     justify-content: space-around;
-
+    align-items: center;
+    height: 200px;
+}
+.item-menu{
+    background-color: lightgreen;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 5px;
+    height: 200px;
 }
